--- a/task_tracker/data/tasks.json
+++ b/task_tracker/data/tasks.json
@@ -16,5 +16,11 @@
         "status": "todo",
         "createdAt": "2025-03-02T17:16:20.821893+00:00",
         "updatedAt": "2025-03-02T17:17:43.150456+00:00"
+    },
+    "4": {
+        "description": "Python is so useful",
+        "status": "todo",
+        "createdAt": "2025-03-02T18:06:16.284947+00:00",
+        "updatedAt": "2025-03-02T18:06:16.284947+00:00"
     }
 }
